[package]
name = "pointy"
version = "0.2.0"
authors = ["Doug Lau <doug.p.lau@gmail.com>"]
description = "Minimal 2D geometry library"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/pointy"
homepage = "https://github.com/DougLau/pointy"
repository = "https://github.com/DougLau/pointy"
readme = "README.md"
keywords = ["geometry", "2D"]
edition = "2018"

[dependencies]
