[package]
name = "pointy"
version = "0.3.0"
description = "Minimal 2D geometry library"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/pointy"
homepage = "https://github.com/DougLau/pointy"
repository = "https://github.com/DougLau/pointy"
readme = "README.md"
keywords = ["geometry", "2D"]
edition = "2021"

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = []
